--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "Zhejiang, China"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=Z87aASgAAAAJ"
+  googlescholar    : # "https://scholar.google.com/citations?user=Z87aASgAAAAJ"
   email            : "22421035@zju.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
